@@ -14,12 +14,9 @@
 */
 
 #define ECL_BIG_REGISTER_SIZE	32
-#define big_register0_get()	ecl_process_env()->big_register[0]
-#define big_register1_get()	ecl_process_env()->big_register[1]
-#define big_register2_get()	ecl_process_env()->big_register[2]
 #ifdef WITH_GMP
 #define big_init2(x,size)	mpz_init2((x)->big.big_num,(size)*GMP_LIMB_BITS)
-#define big_clear(x)		mpz_clear((x)->big.big_num)
+#define _ecl_big_clear(x)	mpz_clear((x)->big.big_num)
 #define big_set(x,y)		mpz_set((x)->big.big_num,(y)->big.big_num)
 #define big_odd_p(x)		((mpz_get_ui(x->big.big_num) & 1) != 0)
 #define big_even_p(x)		((mpz_get_ui(x->big.big_num) & 1) == 0)
@@ -47,12 +44,12 @@
 #define big_init2(x,size)	((x)->big.big_num=0)
 #define big_clear(x)		mpz_clear((x)->big.big_num)
 #define big_set(x,y)		((x)->big.big_num = (y)->big.big_num)
-extern int big_num_t_sgn(big_num_t x);
+extern int _ecl_big_num_t_sgn(big_num_t x);
 #define big_odd_p(x)		((int)((x)->big.big_num&1) != 0)
 #define big_even_p(x)		((int)((x)->big.big_num&1) == 0)
 #define big_zerop(x)		((x)->big.big_num == (big_num_t)0)
-#define big_sign(x)		big_num_t_sgn((x)->big.big_num)
-#define big_compare(x,y)	big_num_t_sgn((x)->big.big_num - (y)->big.big_num)
+#define big_sign(x)		_ecl_big_num_t_sgn((x)->big.big_num)
+#define big_compare(x,y)	_ecl_big_num_t_sgn((x)->big.big_num - (y)->big.big_num)
 #define big_complement(z, x)	((z)->big.big_num = -((x)->big.big_num))
 #define big_add(z, x, y)	(z)->big.big_num = (x)->big.big_num+(y)->big.big_num
 #define big_sub(z, x, y)	(z)->big.big_num = (x)->big.big_num-(y)->big.big_num
