@@ -16,6 +16,16 @@ ECL 9.9.1:
    numbers. These functions have been made aware of the fact that GMP may
    use other allocation routines and always call mpz_clear() to free memory.
 
+ - The internal functions dealing with bignums have been renamed with the usual
+   prefix "_ecl", and some of them have been turned into macros. Do not use
+   those functions if possible.
+
+ - A new compiler macro ECL_NO_LEGACY can be defined to remove all deprecated
+   macros and functions. Have a look at the end of src/h/external.h to see
+   what functions are deprecated on each release -- typically they are functions
+   that have been renamed with one of the prefixes, ecl_, cl_, si_, ext_ or _ecl.
+   
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
